{
    "name": "EditInputActions",
    "maps": [
        {
            "name": "Edit",
            "id": "1d010e53-cffb-4396-b5a1-cd66b4435ea6",
            "actions": [
                {
                    "name": "MouseClick",
                    "type": "Button",
                    "id": "317534d7-eee7-4038-b554-bbe24cdb37c3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "2c3e8aad-f725-4970-83cf-e2432234de31",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c2459245-9a51-4211-8d96-445da1aaf0b5",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "93c04665-bcd5-4756-9d33-85c135909839",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}